# outcall

./: Cargo.toml  README.md  Trunk.toml  index.html  justfile  tailwind.config.js  tailwind.css
.github/workflows/: release.yml
src/: main.rs
