[package]
name = "outcall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = { version="0.3.1" ,default-features = false, features=["csr","serde", "stable"]}
leptos_router = { version="0.3.1" ,default-features = false, features=["csr" ,"stable"]}
async-trait = "0.1.68"
serde = "1.0.164"

log = "0.4"
console_log = "1"
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.0"